# linear-actuator-firmware

./: Cargo.toml  main.py  readme.md
.cargo/: config
host/: Cargo.toml
host/src/: channel_selector.rs  comms.rs  main.rs  scope_interface.rs  selector.rs  variable_getter.rs
lib/common/: Cargo.toml
lib/common/src/: lib.rs
lib/config/: Cargo.toml
lib/config/src/: config.rs  lib.rs
lib/encoder/: Cargo.toml
lib/encoder/src/: lib.rs  normalizer.rs  unwrap.rs
lib/foc/: Cargo.toml
lib/foc/src/: calibration.rs  config.rs  foc.rs  lib.rs  open_loop_velocity.rs  open_loop_voltage.rs  pid.rs  state_machine.rs  svm.rs  transforms.rs
lib/host/: Cargo.toml
lib/host/src/: comms.rs  main.rs
src/: main.rs
src/app/: comms.rs  scope.rs
