[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { git = "https://github.com/kingoflolz/egui.git"}
framed = { git = "https://github.com/kingoflolz/framed-rs.git"}
serialport = "4.2.0"
common = { path = "../lib/common" }
rand = "0.8.5"
foc = { path = "../lib/foc" }
bincode = { version = "2.0.0-beta.1"}
npy = "0.4.0"
remote-obj = { path = "../../remote-obj" }
rusb = "0.9.1"
npyz = "0.6.1"
eventuals = { git = "https://github.com/kingoflolz/eventuals.git", branch="partialeq" }
# rusb = { git = "https://github.com/kevinmehall/rusb.git", branch = "km-pipe-approach" }