[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0.0-beta.1", features = ["derive", "serde_no_std"], default-features = false}
serde = {version = "1.0", features = [], default-features = false}
foc = { path = "../foc" }
encoder = { path = "../encoder" }
remote-obj = { path = "../../../remote-obj" }
heapless = "0.7.5"