[package]
name = "encoder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.0"
bincode = { version = "2.0.0-beta.1", features = ["derive"], default-features = false}
remote-obj = { path = "../../../remote-obj" }
biquad = "0.4.2"
nalgebra = { version = "0.31.1", default-features = false}
config = { path = "../config" }

[dev-dependencies]
rand = "0.8"
rand_distr = "0.4"