[package]
name = "foc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
encoder = { path = "../encoder" }
bincode = { version = "2.0.0-beta.1", features = ["derive"], default-features = false}